--- a/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
+++ b/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
@@ -1,32 +1,44 @@
-<div class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto bg-white" cdkScrollable>
+<div class="px-10 pt-4 absolute inset-0 flex flex-col min-w-0 overflow-y-scroll bg-white" cdkScrollable>
 
     <!-- Header -->
     <div
-        class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8  bg-card dark:bg-transparent">
+        class="pt-4">
         <div class="flex-1 min-w-0">
 
             <!-- Title -->
-            <div class="mt-2">
+            <div>
                 <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
                     Document Type List
                 </h2>
             </div>
         </div>
-        <mat-form-field appearance="outline">
-            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search"
-                   maxlength="30" autocomplete="off">
-            <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
-        </mat-form-field>
-        <!-- Actions -->
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <button (click)="addDocumentType()" mat-raised-button color="primary" type="button"
-                    class="btn btn-primary">
-                <span>New Type</span>
-            </button>
 
+        
+        <div class="row pt-4">
+            <div class="col-lg-4 col-sm-12">
+                <mat-form-field appearance="outline" class="w-full">
+                    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search"
+                           maxlength="30" autocomplete="off">
+                    <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
+                </mat-form-field>
+            </div>
         </div>
+        <div class="row my-2">
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                    <button (click)="addDocumentType()" mat-raised-button color="primary" type="button"
+                            class="btn btn-primary">
+                        <span>New Type</span>
+                    </button>
+        
+                </div>
+            </div>
+        </div>
+
+        <!-- Actions -->
+
     </div>
-    <div class="example-table-container mx-10 shadow-lg rounded p-5 bg-gray-50">
+    <div class="example-table-container">
 
         <mat-table class="lmat-elevation-z8 "
                    #table
