--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -47,7 +47,7 @@
 
             <mapping-request></mapping-request>
 
-            <notifications></notifications>
+            <!-- <notifications></notifications> -->
 
 
             <!--            <button-->
