--- a/src/app/modules/customer/referback-customers/referback-customers.component.html
+++ b/src/app/modules/customer/referback-customers/referback-customers.component.html
@@ -1,12 +1,12 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Refer Back Customer</div>
+<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
+  <div class="text-4xl font-extrabold tracking-tight">Refer Back Customer</div>
 
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
+  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4"
     style="flex-wrap: wrap">
 
   </div>
-  <div class="flex flex-auto overflow-hidden mx-12" style="flex-direction: column;">
+  <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
 
     <div class="example-table-container">
       <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort" matSortActive="id"
