--- a/src/app/modules/deceased-customer/referback-deceased/referback-deceased.component.html
+++ b/src/app/modules/deceased-customer/referback-deceased/referback-deceased.component.html
@@ -1,6 +1,6 @@
 <div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight px-2">List of Deceased Customers</div>
-    <div class="mat-table__wrapper">
+    <div class="text-4xl font-extrabold tracking-tight">List of Deceased Customers</div>
+    <div class="mat-table__wrapper pt-4">
         <!--[style.height]="gridHeight"-->
         <mat-table class="lmat-elevation-z8"
                    #table
