--- a/src/app/modules/khaad-seed-vendor/add-new-vendor/address-location/address-location.component.html
+++ b/src/app/modules/khaad-seed-vendor/add-new-vendor/address-location/address-location.component.html
@@ -7,19 +7,19 @@
               <h3 class="kt-portlet__head-title">Add Vendor's Location</h3>
           </div>
           <!-- <span (click)="close(0)"><mat-icon>close</mat-icon></span> -->
-          <button mat-raised-button color="primary" class="org-button" (click)="onSelect()">Select</button>
+         
           <button mat-raised-button color="warn" class="btn center" style="width: 5px; height: 30px;" (click)="close(0)"><mat-icon>close</mat-icon></button>
       </div>
-
+      <input type="text" class="form-control my-4" (keydown.enter)="$event.preventDefault()" placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
   </div>
 
-  <div class="row">
-    <div class="col-lg-12 col-md-12  mat-elevation-z8 mt-2">
+  <div class="row ">
+    <div class="col-lg-12 col-md-12 shadow-lg rounded-lg text-right">
 
-      <label>Search</label>
-      <input type="text" class="form-control mb-2" (keydown.enter)="$event.preventDefault()" placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
+      <!-- <label>Search</label> -->
+      <button mat-raised-button color="primary" class="org-button my-2 text-right" (click)="onSelect()"><mat-icon class="mr-2"> location_on</mat-icon>Select</button>
 
-      <agm-map #gm [zoom]="zoom" style="height: 500px;"
+      <agm-map class="w-full" #gm [zoom]="zoom" style="height: 500px;"
                [latitude]="lat"
                [longitude]="lng"
                [mapTypeControlOptions]="controlOptions"
