--- a/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
+++ b/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
@@ -2,11 +2,11 @@
 
 
 
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
   <!-- Header -->
   <div
-      class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8">
+      class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4">
       <!-- Loader -->
       <div
           class="absolute inset-x-0 bottom-0"
@@ -16,8 +16,12 @@
       <!-- Title -->
       <div class="text-4xl font-extrabold tracking-tight">Assign Pages</div>
       <!-- Actions -->
-      <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-        <mat-form-field class="mat-form-field-fluid" appearance="outline" id="focus-removal">
+
+  </div>
+  <div class="row">
+    <div class="col-lg-4 col-sm-12">
+      <div class="flex flex-shrink-0 items-center mt-4 sm:mt-0">
+        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
           <mat-label>Roles</mat-label>
           <mat-select  placeholder="--Select--" name="ProfileID"
                       (selectionChange)="getProfile($event)">
@@ -27,12 +31,13 @@
           </mat-select>
         </mat-form-field>
     </div>
+    </div>
   </div>
    <!-- Main -->
    <div class="">
     <!-- CONTENT GOES HERE -->
     <div class="pt-1">
-      <div class="form-group row mx-10" style="
+      <div class="form-group row" style="
       min-width: max-content;
       max-height: 50vh;
       overflow-y:scroll;
@@ -97,11 +102,11 @@
        
       </div>
       <div class="col-lg-12">
-        <button type="button" *ngIf="!ShowButton" mat-raised-button color="primary" class="btn btn-primary"
+        <button type="button" *ngIf="!ShowButton"  color="primary" class="mat-focus-indicator mat-flat-button mat-button-base mat-primary"
                 (click)="onSubmit()"
                 [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                 [disabled]="viewLoading || submitted">
-          Save
+                <mat-icon class="mr-2">save</mat-icon> Save
         </button>
       </div>
     </div>
