--- a/src/app/modules/user-management/Role/role-list/role-list.component.html
+++ b/src/app/modules/user-management/Role/role-list/role-list.component.html
@@ -1,8 +1,8 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
     <!-- Header -->
     <div
-        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8">
+        class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4">
         <!-- Loader -->
         <div
             class="absolute inset-x-0 bottom-0"
@@ -12,7 +12,7 @@
         <!-- Title -->
         <div class="text-4xl font-extrabold tracking-tight">Roles list</div>
         <!-- Actions -->
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
             <button
                 class="ml-4"
                 mat-flat-button
@@ -25,7 +25,7 @@
     </div>
 
     <!-- Main -->
-    <div class="flex flex-auto overflow-y-scroll mx-10">
+    <div class="flex flex-auto overflow-y-scroll">
 
         <!-- Products list -->
         <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
