--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -110,7 +110,7 @@ body.light .mat-select-disabled .mat-select-value, body .light .mat-select-disab
 
 .mat-paginator-outer-container{
   .mat-paginator-container{
-    padding-top: 0px;
+    padding-top: 0;
     padding-bottom: 0px;
     .mat-paginator-page-size{
       margin-top: 0px;
