--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -103,8 +103,8 @@
 
 <div class="row">
     <div class="col-lg-4">
-        <button mat-raised-button class="mat-raised-button mat-button-base mat-primary"
-        type="button" (click)="searchVendor()"><mat-icon class="mr-2">search</mat-icon> Search</button>
+        <button mat-raised-button class="mat-raised-button mat-button-base mat-primary mb-2"
+        type="button" (click)="searchVendor()"><mat-icon class="mr-2 ">search</mat-icon> Search</button>
 </div>
 </div>
 
@@ -157,15 +157,15 @@
                     <th mat-header-cell *matHeaderCellDef>Actions</th>
                     <td mat-cell *matCellDef="let vendor">
                         <button mat-icon-button color="primary" (click)="viewVendor(vendor)">
-                            <mat-icon title="View Vendor">visibility</mat-icon>
+                            <mat-icon title="View Vendor" color="primary">visibility</mat-icon>
                         </button>
 
                         <button mat-icon-button color="primary" *ngIf="editDeleteStatus(vendor)" (click)="editVendor(vendor)">
                             <mat-icon title="View Vendor">edit</mat-icon>
                         </button>
 
-                        <button mat-icon-button color="primary" *ngIf="editDeleteStatus(vendor)" (click)="deleteVendor(vendor)">
-                            <mat-icon title="View Vendor">delete</mat-icon>
+                        <button mat-icon-button *ngIf="editDeleteStatus(vendor)" (click)="deleteVendor(vendor)">
+                            <mat-icon title="View Vendor" class="text-red-500">delete_forever</mat-icon>
                         </button>
                     </td>
                 </ng-container>
@@ -186,7 +186,7 @@
                     <mat-option [value]="1000">1000</mat-option>
                 </mat-select>
                 <button (click)="paginate(1)">First</button>
-                <pagination-controls display="inline" (pageChange)="paginate($event)"
+                <pagination-controls class="mt-4" display="inline" (pageChange)="paginate($event)"
                                      style="display: inline-block;"></pagination-controls>
                 <button (click)="paginate(MathCeil(totalItems/itemsPerPage))">Last</button>
                 <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
