--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -154,17 +154,22 @@
             </mat-form-field>
         </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-4  mb-2">
-            <button (click)="searchloanutilization()" mat-flat-button [color]="'primary'">
-                <mat-icon class="mr-2">search</mat-icon> Search
-            </button>
-        </div>
+
     </div>
 
 
 
 
 
+        </div>
+        <div class="row">
+            <div class="col-lg-6 col-sm-12">
+                <div class="flex flex-shrink-0 items-center  mb-2">
+                    <button (click)="searchloanutilization()" mat-flat-button [color]="'primary'">
+                        <mat-icon class="mr-2">search</mat-icon> Search
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 
