--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -1,27 +1,38 @@
 <div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight px-2">Set Target</div>
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4"
-         [formGroup]="customerForm">
+    <div class="text-4xl font-extrabold tracking-tight">Set Target</div>
+    <div class="py-4" [formGroup]="customerForm">
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-            <mat-form-field class="mat-form-field-fluid mr-4" appearance="outline">
-                <mat-label>Select Duration</mat-label>
-                <mat-select #sel (selectionChange)="OnChange(sel.value)" formControlName="Duration">
-                    <mat-option>
-                        Select
-                    </mat-option>
-                    <mat-option *ngFor="let obj of TargetDuration" [value]="obj.Id">
-                        {{obj.Name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4 mb-2">
-                <button (click)="find()" class="ml-4" mat-flat-button [color]="'primary'">
-                    <span class="ml-2 mr-1">Find</span>
-                </button>
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                    <mat-label>Select Duration</mat-label>
+                    <mat-select #sel (selectionChange)="OnChange(sel.value)" formControlName="Duration">
+                        <mat-option>
+                            Select
+                        </mat-option>
+                        <mat-option *ngFor="let obj of TargetDuration" [value]="obj.Id">
+                            {{obj.Name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
             </div>
-
         </div>
+
+        <div class="row">
+            <div class="col-lg-6 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+
+                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mb-2">
+                        <button (click)="find()"  mat-flat-button [color]="'primary'">
+                            <mat-icon class="mr-2">search</mat-icon> Search
+                        </button>
+                    </div>
+        
+                </div>
+            </div>
+        </div>
+
+
         </div>
 
         <div class="text-4xl font-extrabold tracking-tight">Targets</div>
