--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -1,4 +1,4 @@
-<div id="Kt-portlet-margin-top">
+<div class="px-10 pt-4 " id="Kt-portlet-margin-top">
     <div class="kt-portlet">
         <!--[ngClass]="{ 'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }"-->
         <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
