--- a/src/app/modules/device-mapping/map-notification-status/map-notification-status.component.html
+++ b/src/app/modules/device-mapping/map-notification-status/map-notification-status.component.html
@@ -17,14 +17,16 @@
         <span style="font-weight: 400; font-size: 20px;">{{data.mapp.NotificationText}}</span>
     </div>
 
-    <hr style="margin-top: 80px;">
+    <hr style="margin-top: 20px;">
+<div class="row">
+  <div class="col-lg-12 justify-content-end text-right">
+    <!-- <button *ngIf="create" mat-raised-button color="primary" class="org-button mr-2" (click)="onCreate()">Create Mapping</button> -->
+    <button *ngIf='create' mat-raised-button color="primary" class="org-button mr-2"  (click)="onCreate()">Create Mapping</button>
+    <!-- <button mat-raised-button class="org-button button-red" (click)="close(0)">Close</button> -->
+    <button *ngIf="violat" mat-raised-button class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" (click)="block()">Block</button>
+  </div>
+</div>
 
-    <div class="col-lg-12 row d-flex justify-content-end">
-      <!-- <button *ngIf="create" mat-raised-button color="primary" class="org-button mr-2" (click)="onCreate()">Create Mapping</button> -->
-      <button *ngIf='create' mat-raised-button color="primary" class="org-button mr-2"  (click)="onCreate()">Create Mapping</button>
-      <!-- <button mat-raised-button class="org-button button-red" (click)="close(0)">Close</button> -->
-      <button *ngIf="violat" mat-raised-button color="warn" (click)="block()">Block</button>
-    </div>
 
 </div>
   
