--- a/src/app/modules/device-mapping/mapping-request/map-req-dialog/map-req-dialog.component.html
+++ b/src/app/modules/device-mapping/mapping-request/map-req-dialog/map-req-dialog.component.html
@@ -2,14 +2,25 @@
     <div class="kt-portlet">
       <!--[ngClass]="{ 'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }"-->
       <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
-        <div class="kt-portlet__head-label">
-          <h3 class="kt-portlet__head-title">Mapping Request</h3>
-        </div>
-        <div class="text-center mt-3 d-flex justify-content-end">
-          <button mat-icon-button color="primary" (click)="close(0)">
-              <mat-icon>close</mat-icon>
-          </button>
+
+        <div class="row">
+          <div class="col-lg-6 col-sm-12 pt-2">
+            <div class="kt-portlet__head-label">
+              <h3 class="kt-portlet__head-title text-xl">Mapping Request</h3>
+            </div>
+          </div>
+          <div class="col-lg-6 col-sm-12 text-right">
+            <div class="text-right">
+              <button mat-icon-button color="primary" (click)="close(0)">
+                  <mat-icon>close</mat-icon>
+              </button>
+          </div>
+          </div>
       </div>
+
+
+
+
       </div>
     </div>
   
