--- a/src/app/modules/land-creation/large-files-upload/large-files-upload.component.html
+++ b/src/app/modules/land-creation/large-files-upload/large-files-upload.component.html
@@ -1,51 +1,66 @@
 <div class="kt-portlet">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
-        <div class="kt-portlet__head-label">
-            <h3 class="kt-portlet__head-title">{{getTitle()}}</h3>
+        <div class="kt-portlet__head-label py-4 ">
+            <h3 class=" kt-portlet__head-title text-3xl">{{getTitle()}}</h3>
         </div>
     </div>
     <form class="kt-form kt-form--group-seperator-dashed" [formGroup]="myForm">
         <div class="kt-form">
             <div class="kt-portlet__body">
-                <div class="form-group kt-form__group row">
-                    <div class="col-lg-6 kt-margin-bottom-20-mobile" *ngIf="!isFormReadonly">
-                        <label>Select Image</label>
-                        <input formControlName="file"
-                               id="file"
-                               type="file"
-                               class="form-control"
-                               multiple=""
-                               (change)="onFileChange($event)">
-                    </div>
-                </div>
-                <div class="form-group kt-form__group row">
-                    <div *ngFor="let url of uploadDocumentsData; let i = index;">
-                        <div class="col-lg-3" *ngIf="CheckImageOrVideo(url.Path)">
-                            <span class="delete-entry"
-                                  style="cursor:pointer;position: absolute; z-index: 5; right:42px;TOP: -13px; font-size:20px;"
-                                  (click)="deleteImage(url.Path,url.ImageID,i)" *ngIf="!isFormReadonly"><b>x</b></span>
-                            <a href="{{url.Path}}" target="_blank"><img [src]="url.Path" class="rounded float-left"
-                                                                        style="width:200px; height:120px;"></a>
-                        </div>
-                        <div class="col-lg-3" *ngIf="CheckImageOrVideo(url.VideoPath)">
-                            <span class="delete-entry"
-                                  style="cursor:pointer;position: absolute; z-index: 5; right:42px;TOP: -13px; font-size:20px;"
-                                  (click)="deleteImage(url.VideoPath,url.ImageID,i)"
-                                  *ngIf="!isFormReadonly"><b>x</b></span> <a href="{{url.VideoPath}}" target="_blank">
 
-                            <video width="200" height="120" controls>
-                                <source [src]="url.VideoPath" type="video/mp4">
-                            </video>
 
-                            <!--<img [src]="" class="rounded float-left" style="width:100px; height:100px;">-->
-                        </a>
-                        </div>
-                        <div class="col-lg-3">
-                            <b>{{url.LandLatitude}}</b>
-                            <b> {{url.LandLongitude}}</b>
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="form-group kt-form__group row">
+                            <div class=" kt-margin-bottom-20-mobile" *ngIf="!isFormReadonly">
+                                <label>Select Image</label>
+                                <input formControlName="file"
+                                       id="file"
+                                       type="file"
+                                       class="form-control"
+                                       multiple=""
+                                       (change)="onFileChange($event)">
+                            </div>
                         </div>
                     </div>
+
                 </div>
+
+
+                <div class="row py-4">
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="form-group kt-form__group flex">
+                            <div *ngFor="let url of uploadDocumentsData; let i = index;">
+                                <div class="col-lg-12" *ngIf="CheckImageOrVideo(url.Path)">
+                                    <span class="delete-entry mx-2 relative"
+                                          style="cursor:pointer;position: absolute; z-index: 5; right:0px;TOP: 26px; font-size:20px;"
+                                          (click)="deleteImage(url.Path,url.ImageID,i)" *ngIf="!isFormReadonly"><b>x</b></span>
+                                    <a href="{{url.Path}}" target="_blank"><img class="mx-4" [src]="url.Path" class="rounded float-left"
+                                                                                style="width:200px; height:120px; padding-right:5px; "></a>
+                                </div>
+                                <div class="col-lg-12" *ngIf="CheckImageOrVideo(url.VideoPath)">
+                                    <span class="delete-entry mx-4"
+                                          style="cursor:pointer;position: absolute; z-index: 5; right:42px;TOP: -13px; font-size:20px;"
+                                          (click)="deleteImage(url.VideoPath,url.ImageID,i)"
+                                          *ngIf="!isFormReadonly"><b>x</b></span> <a href="{{url.VideoPath}}" target="_blank">
+        
+                                    <video width="200" height="120" controls>
+                                        <source [src]="url.VideoPath" type="video/mp4">
+                                    </video>
+        
+                                    <!--<img [src]="" class="rounded float-left" style="width:100px; height:100px;">-->
+                                </a>
+                                </div>
+                                <div class="col-lg-3">
+                                    <b>{{url.LandLatitude}}</b>
+                                    <b> {{url.LandLongitude}}</b>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div>
                     <span style="color:red;" [innerHTML]="errorMessage"></span>
                 </div>
@@ -55,11 +70,11 @@
                     <div class="row text-center">
                         <div class="col-lg-12">
                             <button mat-raised-button color="primary" *ngIf="!isFormReadonly"
-                                    (click)="UploadDocuments()">Upload Documents
+                                    (click)="UploadDocuments()"><mat-icon class="mr-2">cloud_upload</mat-icon>Upload Documents
                             </button>&nbsp;&nbsp;
-                            <button type="button" class="button-red" mat-raised-button cdkFocusInitial
+                            <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
                                     (click)="onCloseClick()">
-                                Close
+                                    <mat-icon class="mr-2">cancel</mat-icon>Close
                             </button>
                         </div>
                     </div>
