--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -290,7 +290,7 @@
                     <th>5-Under Custom Hiring</th>
                     <th>Total (1+2+4+5-3)</th>
                 </tr>
-                <tr class="text-center">
+                <tr class="text-center border-0">
                     <td>Barani</td>
                     <td>
                         <mat-form-field class="mat-form-field-fluid" appearance="outline">
@@ -347,7 +347,7 @@
                     </td>
                 </tr>
 
-                <tr class="text-center">
+                <tr class="text-center border-0">
                     <td>Irrigated</td>
                     <td>
                         <mat-form-field class="mat-form-field-fluid" appearance="outline">
@@ -406,7 +406,7 @@
                     </td>
                 </tr>
 
-                <tr class="text-center">
+                <tr class="text-center border-0">
                     <td>Un-Cultivated</td>
                     <td>
                         <mat-form-field class="mat-form-field-fluid" appearance="outline">
@@ -465,7 +465,7 @@
                     </td>
                 </tr>
 
-                <tr class="text-center">
+                <tr class="text-center border-0">
                     <td>Un-cultivable</td>
                     <td>
                         <mat-form-field class="mat-form-field-fluid" appearance="outline">
@@ -522,7 +522,7 @@
                     </td>
                 </tr>
 
-                <tr class="text-center">
+                <tr class="text-center border-0">
                     <td>Total Area</td>
                     <td>
                         <mat-form-field class="mat-form-field-fluid" appearance="outline">
