--- a/src/app/modules/report-managment/apilog-detail/apilog-detail.component.html
+++ b/src/app/modules/report-managment/apilog-detail/apilog-detail.component.html
@@ -1,16 +1,20 @@
 <h3 class="kt-portlet__head-title">Api Log({{RequestResponse.APIName}})</h3>
+<div class="row">
+    <div class="col-lg-6">
+        <table class="table w-6/12 ">
+            <thead class="bg-success">
+            <tr style="text-align: center">
+                <th scope="col">Request</th>
+                <th scope="col">Response</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td class="w-3/6"> {{RequestResponse.Request}}</td>
+                <td>{{RequestResponse.Response}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 
-<table class="table ">
-    <thead class="bg-success">
-    <tr style="text-align: center">
-        <th scope="col">Request</th>
-        <th scope="col">Response</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td> {{RequestResponse.Request}}</td>
-        <td>{{RequestResponse.Response}}</td>
-    </tr>
-    </tbody>
-</table>
