--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -596,7 +596,7 @@
         <div class="col-lg-8 kt-margin-bottom-20-mobile">
             <button mat-raised-button type="button" color="primary" (click)="saveCustomerLandInfoDetails()"
                     [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
-                    *ngIf="ShowTable && !isFormReadonly">Save
+                    *ngIf="ShowTable && !isFormReadonly"><mat-icon class="mr-2">save</mat-icon> Save
             </button>
             <button mat-raised-button type="button" color="primary" (click)="landChargeCreation()"
                     *ngIf="AllowchargeCreation ">
