--- a/src/app/modules/land-creation/large-files-upload/large-files-upload.component.html
+++ b/src/app/modules/land-creation/large-files-upload/large-files-upload.component.html
@@ -28,33 +28,33 @@
 
 
                 <div class="row py-4">
-                    <div class="col-lg-4 col-sm-12">
-                        <div class="form-group kt-form__group flex">
-                            <div *ngFor="let url of uploadDocumentsData; let i = index;">
-                                <div class="col-lg-12" *ngIf="CheckImageOrVideo(url.Path)">
-                                    <span class="delete-entry mx-2 relative"
-                                          style="cursor:pointer;position: absolute; z-index: 5; right:0px;TOP: 26px; font-size:20px;"
+                    <div>
+                        <div class="form-group kt-form__group row">
+                            <div class="col-lg-3"  *ngFor="let url of uploadDocumentsData; let i = index;">
+                                <div  *ngIf="CheckImageOrVideo(url.Path)">
+                                    <span class="delete-entry relative"
+                                          style="cursor:pointer;position: absolute; z-index: 5; right:-7px;TOP: 26px; font-size:20px;"
                                           (click)="deleteImage(url.Path,url.ImageID,i)" *ngIf="!isFormReadonly"><b>x</b></span>
                                     <a href="{{url.Path}}" target="_blank"><img class="mx-4" [src]="url.Path" class="rounded float-left"
                                                                                 style="width:200px; height:120px; padding-right:5px; "></a>
                                 </div>
-                                <div class="col-lg-12" *ngIf="CheckImageOrVideo(url.VideoPath)">
-                                    <span class="delete-entry mx-4"
-                                          style="cursor:pointer;position: absolute; z-index: 5; right:42px;TOP: -13px; font-size:20px;"
+                                <div   *ngIf="CheckImageOrVideo(url.VideoPath)">
+                                    <span class="delete-entry  relative"
+                                          style="cursor:pointer;position: absolute; z-index: 5;  right:-7px;TOP: 26px; font-size:20px;"
                                           (click)="deleteImage(url.VideoPath,url.ImageID,i)"
                                           *ngIf="!isFormReadonly"><b>x</b></span> <a href="{{url.VideoPath}}" target="_blank">
         
-                                    <video width="200" height="120" controls>
+                                    <video width="200" height="140" controls style="width:200px; height:120px; padding-right:5px; ">
                                         <source [src]="url.VideoPath" type="video/mp4">
                                     </video>
         
                                     <!--<img [src]="" class="rounded float-left" style="width:100px; height:100px;">-->
                                 </a>
                                 </div>
-                                <div class="col-lg-3">
+                                <!-- <div class="col-lg-3">
                                     <b>{{url.LandLatitude}}</b>
                                     <b> {{url.LandLongitude}}</b>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
