--- a/src/app/modules/khaad-seed-vendor/add-new-vendor/address-location/address-location.component.html
+++ b/src/app/modules/khaad-seed-vendor/add-new-vendor/address-location/address-location.component.html
@@ -30,6 +30,7 @@
                 <agm-marker  *ngFor="let prev of PreviousLocation"
                               [latitude]="prev.lat"
                               [longitude]="prev.lng"
+                              [iconUrl]="prev.iconUrl"
                               >
   
                 </agm-marker>
