--- a/src/app/modules/khaad-seed-vendor/vendor-radius/vendor-radius.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-radius/vendor-radius.component.html
@@ -161,6 +161,7 @@
                     [latitude]="r.Lat"
                     [longitude]="r.Lng"
                     [title]="r.Name"
+                    [iconUrl]="r.iconUrl"
         >
 
             <agm-info-window #infowindow>
