--- a/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
+++ b/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
@@ -1,46 +1,67 @@
-<div class="kt-portlet"
+<div class=" px-4  kt-portlet"
      [ngClass]="{ 'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }">
     <div class="kt-portlet__head kt-portlet__head__custom">
         <div class="kt-portlet__head-label">
-            <h3 class="kt-portlet__head-title">{{getTitle()}}</h3>
-
-            <h5 class="mr-5 ml-5 mt-3"><span class="map-circle-1 mr-2"> </span>Add</h5>
-            <h5 class="mr-5 mt-3"><span class="map-circle-2 mr-2"> </span>Edit</h5>
-            <h5 class="mr-5 mt-3"><span class="map-circle-3 mr-2"> </span>View</h5>
+            <h3 class="kt-portlet__head-title text-xl font-bold py-4">{{getTitle()}}</h3>
         </div>
 
-        <div class="row text-right" style="margin-top:10px">
-            <div class="col-lg-12">
-                <button *ngIf="isClearBtnShown" type="button" class="btn btn-primary" mat-raised-button color="primary"
-                        (click)="Clear()" [disabled]="viewLoading || submitted">
-                    Clear
-                </button>
-                <button *ngIf="isSaveBtnShown" type="button" class="btn btn-primary ml-1" mat-raised-button
-                        color="primary" (click)="onSubmit()" [disabled]="viewLoading || submitted">
-                    Save
-                </button>
-                <button *ngIf="isEditBtnShown && _currentActivity.U" type="button" class="btn btn-primary ml-1"
-                        mat-raised-button color="primary" (click)="editCircleFense()"
-                        [disabled]="viewLoading || submitted">
-                    Edit
-                </button>
-                <button *ngIf="isDeleteBtnShown && _currentActivity.D" type="button" class="btn btn-primary ml-1"
-                        mat-raised-button color="primary" (click)="DeeteCircleFence()"
-                        [disabled]="viewLoading || submitted">
-                    Delete
-                </button>
-                <button type="button" class="button-red ml-1" mat-raised-button cdkFocusInitial value="Cancel"
-                        [mat-dialog-close]="false">
-                    Cancel
-                </button>
-            </div>
+
+
+        <div class="row py-3">
+
+          <div class="col-lg-3 col-sm-12">
+            <button *ngIf="isEditBtnShown && _currentActivity.U" type="button" class="btn btn-primary"
+            mat-raised-button color="primary" (click)="editCircleFense()"
+            [disabled]="viewLoading || submitted">
+            <mat-icon class="mr-2">edit</mat-icon> Edit
+            </button>
+          </div>
+          <div class="col-lg-3 col-sm-12">
+            <button *ngIf="isDeleteBtnShown && _currentActivity.D" type="button" class="btn btn-primary"
+            mat-raised-button color="primary" (click)="DeeteCircleFence()"
+            [disabled]="viewLoading || submitted">
+            <mat-icon class="mr-2">delete_forever</mat-icon> Delete
+            </button>
+          </div>
+          <div class="col-lg-3 col-sm-12">
+            <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel"
+            [mat-dialog-close]="false">
+            <mat-icon class="mr-2">cancel</mat-icon>Cancel
+          </button>
+          </div>
+          <div class="col-lg-3 col-sm-12">
+            <button *ngIf="isClearBtnShown" type="button" class="btn btn-primary" mat-raised-button color="primary"
+            (click)="Clear()" [disabled]="viewLoading || submitted">
+            <mat-icon class="mr-2"> clear_all</mat-icon>Clear
+            </button>
+          </div>
+          <div class="col-lg-3 col-sm-12">
+            <button *ngIf="isSaveBtnShown" type="button" class="btn btn-primary" mat-raised-button
+            color="primary" (click)="onSubmit()" [disabled]="viewLoading || submitted">
+            <mat-icon class="mr-2">save</mat-icon> Save
+            </button>
+          </div>
+      </div>
+
+      <div class="row py-2">
+        <div class="col-lg-12 text-right flex place-content-end">
+          <h5 class="mr-5 ml-5 mt-3"><span class="map-circle-1 mr-2"> </span>Add</h5>
+
+
+          <h5 class="mr-5 mt-3"><span class="map-circle-2 mr-2"> </span>Edit</h5>
+
+
+
+          <h5 class="mr-5 mt-3"><span class="map-circle-3 mr-2"> </span>View</h5>
         </div>
+      </div>
+
     </div>
     <form class="kt-form kt-form--group-seperator-dashed">
         <div class="kt-form">
             <div class="kt-portlet__body">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12  mat-elevation-z8">
+                <div class="row ">
+                    <div class="col-lg-12 col-md-12  mat-elevation-z8 p-3">
 
 
                         <label>Search</label>
